# straightshot

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml  setup-python.yml
docs/: features.md
docs/dev/: architecture.md
docs/features/: multi-language.md  seo.md  templates.md
docs/user/: __init__.py  _overview.md  configuration.md  content.md  example-site.md  getting-started.md
example-site/: serve.py  site.yaml
example-site/content/: about.md  site.yaml
example-site/content/data/: navigation.yaml  site-config.json
example-site/content/drafts/: some_draft.md
example-site/content/publish/articles/: cpp_modern_practices.md  modern_architecture_patterns.md  modern_architecture_patterns_es.md  modern_architecture_patterns_fr.md  web_development_trends_2025.md
example-site/content/publish/talks/: building_resilient_systems.md  ethical_ai_systems.md
example-site/static/css/: main.css  syntax.css
example-site/static/js/: main.js
example-site/templates/: _macros.html  about.html  article.html  base.html  blog_index.html  feed.xml  index.html  post_template.md  sitemap.xml
example-site/templates/tags/: link.html  site_meta.html  slides.html  youtube.html
straightshot/: builder.py  cli.py  config.py  content_processor.py  custom_tags.py  docs_utils.py  main.py  models.py  output_writer.py  templating.py
